# JSB01

./: .gitignore  CMakeLists.txt  LICENSE  README.md  markdown.css  platformio.ini  sdkconfig
.github/workflows/: jekyll-gh-pages.yml
Blender/: JSB01r2.blend
Firmware/: platformio.ini
Firmware/src/: BH1750FVI.h  Board.cpp  Board.h  Compass.cpp  Feedback.cpp  FeedbackPattern.h  M5_BH1750FVI.h  MB10xx.cpp  MB10xx.h  Prefs.cpp  Prefs.h  TOFSensor.cpp  TOFSensor.h  Userinput.cpp  Userinput.h  Vibrator.cpp  Vibrator.h  main.cpp
Hardware/: README.md
Hardware/Blender/: JSB01_caseR21.stl  JSB01_caseR31.stl  JSB01_casetopR2.stl  JSB01_casetopR31.stl  JSB01r2_1.blend  JSB01r31.blend  JSB01r31_1.blend
Hardware/KiCad/: JSB01.kicad_pcb  JSB01.kicad_prl  JSB01.kicad_pro  JSB01R3.kicad_prl  JSB01R3.kicad_sch  JSB01_Lib.kicad_sym  fp-info-cache  sym-lib-table
Hardware/KiCad/JSB01_Lib.pretty/: AO3400A.kicad_mod  BatteryHolder SN4-2PC.kicad_mod  Jumper_1x03_P2.54mm.kicad_mod  LD14.kicad_mod  (+8 more)
KiCad/: JSB01.kicad_sch  JSB01R3.kicad_pcb  JSB01R3.kicad_pro  fp-lib-table
KiCad/JSB01_Lib.pretty/: BatteryHolder 2xAAA.kicad_mod  IND-SMD_L2.5-W2.0-1.kicad_mod  IND-SMD_L3.0-W3.0_VLS3010ET.kicad_mod  KEY-SMD_4P-L4.2-W3.2.kicad_mod  LED0603-RD_GREEN.kicad_mod  LGA-16_L3.0-W3.0-P0.50-BL_SQ.kicad_mod  OSC-SMD_4P-L3.2-W2.5.kicad_mod  Pad1.2_0.8.kicad_mod  PinSocket_1x06_P2.54mm_Horizontal.kicad_mod  SOD-323_L1.8-W1.3-LS2.5-RD.kicad_mod  SW_Slide_ESD1752.kicad_mod  Tactile Switch_SMD.kicad_mod  Test.kicad_mod  USB-C-SMD_TYPE-C-16P-1.kicad_mod  VIBRATING-MOTOR-SMD_3P.kicad_mod  WSON-6_L2.0-W2.0-P0.65-BL-EP.kicad_mod
components/LV5X/: LV5X.c
components/MB10XX/: CMakeLists.txt  MB10XX.c
components/VL53X/: CMakeLists.txt
components/board/: CMakeLists.txt  README.md  board.cpp
docs/: index.html
main/: CMakeLists.txt  JSB01.cpp  Stargazer.cpp  mb10x.cpp
src/: BH1750FVI.cpp  Board.cpp  Board.h  Compass.cpp  Compass.h  Feedback.cpp  Feedback.h  FeedbackPattern.h  LD14.cpp  LD14.h  M5_BH1750FVI.cpp  MB10xx.cpp  MB10xx.h  Stargazer.cpp  TOFSensor.cpp  TOFSensor.h  UserInput.cpp  UserInput.h  VibeFeedback.cpp  VibeFeedback.h  Vibrator.cpp  Vibrator.h  hardware.h  main.cpp  mydefs.h
(+9 files in other folders)
